bbss218/force-app/main/default/objects/SOW__c/SOW__c.object-meta.xml
<CustomObject>
    <label>SOW</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>SOW Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOW&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>