bbss218/force-app/main/default/objects/SOW__c/fields/Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate__c</fullName>
    <label>Billing Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>