bbss218/force-app/main/default/objects/SOW__c/fields/Candidate_Roles__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Roles__c</fullName>
    <label>Candidate Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>