bbss218/force-app/main/default/objects/SOW__c/fields/Invoice_terms_and_conditions__c.field-meta.xml
<CustomField>
    <fullName>Invoice_terms_and_conditions__c</fullName>
    <label>Invoice terms and conditions</label>
    <type>TextArea</type>
</CustomField>