bbss218/force-app/main/default/objects/SOW__c/fields/Maximum_Expense_Limit__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Expense_Limit__c</fullName>
    <label>Maximum Expense Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>