bbss218/force-app/main/default/objects/SOW__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <label>Milestones</label>
    <type>TextArea</type>
</CustomField>