bbss218/force-app/main/default/objects/SOW__c/fields/MSP_VSP_fees_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>MSP_VSP_fees_if_applicable__c</fullName>
    <label>MSP/VSP fees (if applicable)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>