bbss218/force-app/main/default/objects/SOW__c/fields/Number_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resources__c</fullName>
    <label>Number of Resources</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>