bbss218/force-app/main/default/objects/SOW__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SOW&apos;s</relationshipLabel>
    <relationshipName>SOW_s</relationshipName>
    <type>Lookup</type>
</CustomField>