bbss218/force-app/main/default/objects/SOW__c/fields/SOW_Client_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Client_Sign_Date__c</fullName>
    <label>SOW Client Sign Date</label>
    <type>Date</type>
</CustomField>