bbss218/force-app/main/default/objects/SOW__c/fields/SOW_Client_Signatory__c.field-meta.xml
<CustomField>
    <fullName>SOW_Client_Signatory__c</fullName>
    <label>SOW Client Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>