bbss218/force-app/main/default/objects/SOW__c/fields/SOW_Internal_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Internal_Sign_Date__c</fullName>
    <label>SOW Internal Sign Date</label>
    <type>Date</type>
</CustomField>