bbss218/force-app/main/default/objects/SOW__c/fields/SOW_Internal_Signatory__c.field-meta.xml
<CustomField>
    <fullName>SOW_Internal_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOW Internal Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SOW_s</relationshipName>
    <type>Lookup</type>
</CustomField>