bbss218/force-app/main/default/objects/SOW__c/fields/SOW_Number__c.field-meta.xml
<CustomField>
    <fullName>SOW_Number__c</fullName>
    <label>SOW Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>