bbss218/force-app/main/default/objects/SOW__c/fields/SOW_Signed_Status__c.field-meta.xml
<CustomField>
    <fullName>SOW_Signed_Status__c</fullName>
    <label>SOW Signed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>