bbss218/force-app/main/default/objects/SOW__c/fields/SOW_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Start_Date__c</fullName>
    <label>SOW Start Date</label>
    <type>Date</type>
</CustomField>