bbss218/force-app/main/default/objects/SOW__c/fields/Travel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Travel_Expenses__c</fullName>
    <label>Travel Expenses</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>