bbss218/force-app/main/default/objects/SOW__c/fields/Version_update__c.field-meta.xml
<CustomField>
    <fullName>Version_update__c</fullName>
    <label>Version update</label>
    <length>220</length>
    <type>Text</type>
</CustomField>